--- a/application/application-standard/src/main/resources/db/h2/changelog.yaml
+++ b/application/application-standard/src/main/resources/db/h2/changelog.yaml
@@ -14,3 +14,6 @@ databaseChangeLog:
   - includeAll:
       path: sql/v1.2.1
       relativeToChangelogFile: true
+  - includeAll:
+      path: sql/v1.3.0
+      relativeToChangelogFile: true
