feat: add entity latest value cache

--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -44,6 +44,7 @@ spring:
           [ "device:permission"] : 1h
           [ "dashboard:permission" ] : 1h
           [ "integration:permission" ] : 1h
+          [ "entity:latest-value" ] : 15m
 
   redis:
     ssl: ${REDIS_SSL:false}
