--- a/services/device-template/device-template-service/src/main/resources/template/default_device_template.yaml
+++ b/services/device-template/device-template-service/src/main/resources/template/default_device_template.yaml
@@ -3,32 +3,32 @@ definition:
     type: object
     properties:
       - key: device_id               # json key
-        type: string                 # json type
+        type: string                 # data type
         required: true
         entity_mapping: 'device_id'  # entity identifier
       - key: status                  # json key
-        type: string                 # json type
+        type: string                 # data type
         entity_mapping: 'status'
       - key: metrics                 # json key
-        type: object                 # json type
+        type: object                 # data type
         properties:
           - key: temp                              # json key
-            type: double                           # json type
+            type: double                           # data type
             entity_mapping: 'metrics.temperature'  # entity identifier
           - key: hum                            # json key
-            type: long                          # json type
+            type: long                          # data type
             entity_mapping: 'metrics.humidity'  # entity identifier
       - key: ts                      # json key
-        type: string                 # json type
+        type: string                 # data type
         entity_mapping: 'timestamp'  # entity identifier
   output:
     type: object
     properties:
       - key: serviceId               # json key
-        type: string                 # json type
+        type: string                 # data type
         value: 'set_delay_work'
       - key: inputs               # json key
-        type: object              # json type
+        type: object              # data type
         properties:
           - key: delay_time
             type: long
@@ -47,6 +47,10 @@ initial_entities:
     value_type: string     # entity value type
     type: property         # entity type
     access_mod: RW
+    attributes:
+      enum:
+        OK: OK
+        Offline: Offline
   - identifier: 'metrics'  # entity identifier
     name: 'metrics'        # entity name
     value_type: object     # entity value type
